cmake_minimum_required(VERSION 3.22.0)
project(class_hierarchy)
include_directories(dynamic_library_for_figure)
add_subdirectory(dynamic_library_for_figure)
link_directories(lib/Release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)
add_executable(class_hierarchy)
target_sources(class_hierarchy PRIVATE src/main.cpp)
target_link_libraries(class_hierarchy dynamic_lib)
